-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 24, 25
-
Component/s: hotspot
-
b06
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8376625 | 25.0.3 | Paul Hohensee | P4 | Resolved | Fixed | b01 |
- backported by
-
JDK-8376625 GenShen: Heuristics do not respond to changes in SoftMaxHeapSize
-
- Resolved
-
- duplicates
-
JDK-8353481 GenShen: Changes to SoftMaxHeapSize are ignored in generational mode
-
- Closed
-
- links to
-
Commit(master)
openjdk/jdk25u-dev/98d376f8
-
Commit(master)
openjdk/jdk/fa32bfe1
-
Commit(master)
openjdk/shenandoah-jdk21u/604b3415
-
Review(master)
openjdk/jdk25u-dev/132
-
Review(master)
openjdk/jdk25u-dev/143
-
Review(master)
openjdk/jdk/25943
-
Review(master)
openjdk/shenandoah-jdk21u/202