src/hotspot/share/gc/shenandoah/shenandoahGeneration.hpp
@@ -126,7 +126,7 @@ private:
 
   virtual ShenandoahHeuristics* initialize_heuristics(ShenandoahMode* gc_mode);
 
-  size_t soft_max_capacity() const override { return _soft_max_capacity; }
+  size_t soft_max_capacity() const override;
   size_t max_capacity() const override      { return _max_capacity; }
   virtual size_t used_regions() const;
   virtual size_t used_regions_size() const;
